--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,4 +1,8 @@
 <%= form_for @song  do |f| %>
+  <% if @song.artist.nil? %>
+    <%= artist_select(@artist, @song) %><br />
+  <% end %>
+  <%= f.hidden_field :artist_id %>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
   <%= f.label :artist_name %>
